--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "react-icons": "^4.3.1",
+    "slugify": "^1.6.5",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
